fix a tag colors for dark mode

--- a/static/index.css
+++ b/static/index.css
@@ -79,7 +79,6 @@ span {
 
 a {
 	text-decoration: none;
-	color: #242124;
 	position: relative;
 	transition: 100ms linear;
 }
